--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    overflow-x: hidden;
+}
+
 .me-auto{
     gap: 20px;
    position: relative;
@@ -6,18 +15,95 @@
 }
 
 .carou{
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .card1{
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
+    margin-top: 50px;
     
 }
 .card2{
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
+    margin-top: 50px;
     
+}
+
+#big{
+    margin-top: 50px;
+}
+
+.kart{
+    width: 100%;
+    background-color: rgb(251, 253, 255);
+    margin-top: 100px;
+    padding:50px;
+}
+
+.foot{
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+   right: 100px;
+    
+}
+
+.foot p{
+    font-size: 20px;
+    color: black;
+}
+
+.foot ul li{
+    color: rgb(73, 72, 72);
+    line-height: 10px;
+    margin-top: 20px;
+    font-size: 15px;
+}
+
+.link1{
+    margin-top: 20px;
+    display: flex;
+    gap: 10px;
+    
+
+}
+
+.l1{
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: 1px solid gray;
+    padding: 3px;
+    
+   
+}
+
+.l1 i{
+    font-size: 20px;
+    position: relative;
+    top: 4px;
+}
+
+.link img{
+    margin-top: 20px;
+}
+
+hr{
+    margin-top: 50px;
+}
+
+ .mail{
+    font-size: 12px;
+    color: rgb(105, 105, 105);
+    margin-top: 50px;
+}
+
+.card1 img:hover{
+    border: 1px solid gray;
+}
+
+.card2 img:hover{
+    border: 1px solid gray;
 }
